--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <!-- Обычный хедер -->
     <header id="mainHeader">
         <div class="left-group">
-          <img id="back_btn" src="/img/back_icon.png" width="20px">
-          <img id="photo_profile" src="/img/human_icon.png" width="35px">
+          <img id="back_btn" src="img/back_icon.png" width="20px">
+          <img id="photo_profile" src="img/human_icon.png" width="35px">
           <span class="chat-title">9909</span> <!-- перенесли сюда -->
         </div>
       
